# ESPCAM-LicensePlate

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: build.yml  python_package.yml
Firmware/components/Camera/: CMakeLists.txt  camera.c
Firmware/components/Camera/include/: camera.h
Firmware/components/sdcard/: CMakeLists.txt
Firmware/components/sdcard/include/: sdcard.h
Firmware/components/tcpServer/: CMakeLists.txt
Firmware/components/tcpServer/include/: server.h
Firmware/components/tcp_client/: CMakeLists.txt  tcp_client.c
Firmware/components/tcp_client/include/: tcp_client.h
Firmware/components/util/include/: system_defines.h
Firmware/components/wifi/: CMakeLists.txt
Firmware/components/wifi/include/: wifi.h
Firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
components/Camera/: CMakeLists.txt  camera.c
components/Camera/include/: camera.h
components/sdcard/: CMakeLists.txt  sdcard.c
components/sdcard/include/: sdcard.h
components/tcpServer/: CMakeLists.txt  server.c
components/tcpServer/include/: server.h
components/utils/: CMakeLists.txt  json.c  server.c  wifi.c
components/utils/include/: json.h  server.h  system_defines.h  wifi.h
components/wifi/: CMakeLists.txt  wifi.c
main/: Kconfig.projbuild  main.c
tools/: toolEspPicture.py  tool_script.py
tools/TCPServer/: AsyncServer.py
tools/TCP_Server/: Async_server.py
tools/espPic/: espPicMethods.py
tools/espSavePicture/: espSavePicture.py
tools/esp_save_picture/: esp_save_picture.py
